# electronics_sales_network

./: .env.sample  README.md  pyproject.toml
config/: settings.py  urls.py
products/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
products/migrations/: 0001_initial.py  0002_product_supplier.py
suppliers/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
suppliers/migrations/: 0001_initial.py  0002_alter_supplier_supplier.py  0003_alter_supplier_supplier_level.py  0004_alter_supplier_supplier_level.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
